--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name"        : "glossy",
-    "version"     : "0.1.7",
+    "name"        : "@myndzi/glossy",
+    "version"     : "0.1.9",
     "description" : "Syslog parser and producer",
     "keywords"    : ["syslog", "logging"],
     "url"         : "http://github.com/squeeks/glossy",
