--- a/package.json
+++ b/package.json
@@ -1,43 +1,75 @@
 {
-    "name"        : "@myndzi/glossy",
-    "version"     : "0.1.9",
-    "description" : "Syslog parser and producer",
-    "keywords"    : ["syslog", "logging"],
-    "url"         : "http://github.com/squeeks/glossy",
-    "main"        : "./index.js",
-    "author"      : "Squeeks <privacymyass@gmail.com>",
-    "maintainers" : [
-        { "name" : "Squeeks", "email" : "privacymyass@gmail.com" }
+    "name": "@myndzi/glossy",
+    "version": "0.1.10",
+    "description": "Syslog parser and producer",
+    "keywords": [
+        "syslog",
+        "logging"
     ],
-    "contributors" : [
-        { "name": "artifi", "email": "artifipl@gmail.com" },
-        { "name": "Matt Bornski", "email": "matt@bornski.com" },
-        { "name": "Fyodor Y", "email": "fygrave@o0o.nu" },
-        { "name": "Stan Carney", "email": "stan.carney@rootsh.me" },
-        { "name": "Alexander Metzner", "email": "alexander.metzner@thomann.de" },
-        { "name": "zaphod1984", "email": "zaphod84@gmx.de" },
-        { "name": "Eric Cornelius", "email": "eric.cornelius@mandiant.com" },
-        { "name": "horpto", "email": "_singleton__@hackerdom.ru" }
+    "url": "http://github.com/squeeks/glossy",
+    "main": "./index.js",
+    "author": "Squeeks <privacymyass@gmail.com>",
+    "maintainers": [
+        {
+            "name": "Squeeks",
+            "email": "privacymyass@gmail.com"
+        }
     ],
-    "directories" : {
-	"lib": "./lib",
-	"test": "./test"
+    "contributors": [
+        {
+            "name": "artifi",
+            "email": "artifipl@gmail.com"
+        },
+        {
+            "name": "Matt Bornski",
+            "email": "matt@bornski.com"
+        },
+        {
+            "name": "Fyodor Y",
+            "email": "fygrave@o0o.nu"
+        },
+        {
+            "name": "Stan Carney",
+            "email": "stan.carney@rootsh.me"
+        },
+        {
+            "name": "Alexander Metzner",
+            "email": "alexander.metzner@thomann.de"
+        },
+        {
+            "name": "zaphod1984",
+            "email": "zaphod84@gmx.de"
+        },
+        {
+            "name": "Eric Cornelius",
+            "email": "eric.cornelius@mandiant.com"
+        },
+        {
+            "name": "horpto",
+            "email": "_singleton__@hackerdom.ru"
+        }
+    ],
+    "directories": {
+        "lib": "./lib",
+        "test": "./test"
     },
-    "scripts"     : {
+    "scripts": {
         "test": "node test/runner.js"
     },
-    "repository"  : {
+    "repository": {
         "type": "git",
         "url": "http://github.com/squeeks/glossy.git"
     },
-    "bugs"        : {
+    "bugs": {
         "url": "http://github.com/squeeks/glossy/issues"
     },
-    "licenses"    : [
+    "licenses": [
         {
             "type": "MIT",
             "url": "http://www.opensource.org/licenses/MIT"
         }
     ],
-    "engines"     : { "node": ">= 0.2.5" }
+    "engines": {
+        "node": ">= 0.2.5"
+    }
 }
