chore: Update repository URL
This way the correct URL will be used in the NPM registry (https://www.npmjs.com/package/@myndzi/glossy)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "syslog",
         "logging"
     ],
-    "url": "http://github.com/squeeks/glossy",
+    "url": "http://github.com/myndzi/glossy",
     "main": "./index.js",
     "author": "Squeeks <privacymyass@gmail.com>",
     "maintainers": [
@@ -58,10 +58,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "http://github.com/squeeks/glossy.git"
-    },
-    "bugs": {
-        "url": "http://github.com/squeeks/glossy/issues"
+        "url": "http://github.com/myndzi/glossy.git"
     },
     "licenses": [
         {
